# zkproof

./: .contract-id  .gitignore  CODEX_PROMPTS.md  DEMO_SCRIPT.md  LICENSE  README.md  STRUCTURE.md  vercel.json
circuits/: Nargo.toml  Prover.toml
circuits/src/: main.nr
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/test_snapshots/test/: test_attest_and_check.1.json  test_attest_fails_when_public_inputs_do_not_match_call.1.json  test_attest_fails_without_verification_key.1.json  test_check_nonexistent.1.json  test_get_attestation_details.1.json  test_initialize.1.json  test_no_attestation_returns_false.1.json  test_revoke.1.json  test_store_verification_key_rejects_malformed_key.1.json  test_total_attestations_starts_at_zero.1.json  test_verification_key_storage_roundtrip.1.json
contracts/tests/: generated_proof.rs  vk_probe.rs
docs/: COMPETITIVE_POSITIONING.md  DEMO_CHECKLIST.md  DEPLOYMENT_PROOF.md  EVIDENCE.md  HACKATHON_JUDGE_GUIDE.md  JUDGE_QUICKSTART.md  PRODUCT_WALKTHROUGH.md  QUICKSTART.md  test-output-2026-06-27.txt
docs/specs/: proofpass-post-proof-identity-ledger.md  real-mode.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test-scval.js  vercel.json  vite.config.js  vite.config.ts
frontend/public/: og-image.html  prover-probe.html  zkproof.json
frontend/scripts/: e2e-flow.mjs  gen-vk.mjs
frontend/src/: App.jsx  App.tsx  config.ts  index.css
scripts/: build.sh  check-vk-status.sh  demo.sh  deploy.sh  push.sh  setup.sh  test-flow.sh  update-vk.sh
(+35 files in other folders)
