[package]
name = "zkproof-contract"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.0.1", default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { git = "https://github.com/NethermindEth/rs-soroban-ultrahonk", branch = "main", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils", "alloc"] }

# The bb.js prover produces a fixed-size 14,592-byte UltraHonk proof
# (Barretenberg v0.87.0 layout). 4 x 32-byte public inputs are passed
# separately and concatenated to the proof's pairing-point object during
# on-chain verification.
# (Constants live in src/lib.rs; these comments are not part of Cargo.toml.)

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
